--- a/GPR2 Code.ipynb
+++ b/GPR2 Code.ipynb
@@ -1,6 +1,150 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1269f3cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Index</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Size</th>\n",
+       "      <th>Momentum</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Beta</th>\n",
+       "      <th>Return_M</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>March 30 2024</td>\n",
+       "      <td>MSCI Canada</td>\n",
+       "      <td>100</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>1.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>March 30 2024</td>\n",
+       "      <td>MSCI USA</td>\n",
+       "      <td>200</td>\n",
+       "      <td>250</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>March 30 2024</td>\n",
+       "      <td>MSCI UK</td>\n",
+       "      <td>300</td>\n",
+       "      <td>50</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>March 30 2024</td>\n",
+       "      <td>MSCI China</td>\n",
+       "      <td>400</td>\n",
+       "      <td>300</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>March 30 2024</td>\n",
+       "      <td>MSCI South Africa</td>\n",
+       "      <td>500</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>1.21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date              Index  Price  Size  Momentum  Value  Beta  \\\n",
+       "0  March 30 2024        MSCI Canada    100    10         1     10   0.9   \n",
+       "1  March 30 2024           MSCI USA    200   250         2     10   1.0   \n",
+       "2  March 30 2024            MSCI UK    300    50         5     11   1.2   \n",
+       "3  March 30 2024         MSCI China    400   300         3      9   1.9   \n",
+       "4  March 30 2024  MSCI South Africa    500    20         1     12   0.7   \n",
+       "\n",
+       "   Return_M  \n",
+       "0      1.05  \n",
+       "1      0.94  \n",
+       "2      1.03  \n",
+       "3      0.88  \n",
+       "4      1.21  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "file_path = 'MSCI_data.csv'\n",
+    "datafile = pd.read_csv(file_path)\n",
+    "datafile.head()"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
